# Internee-Cyber-T2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: account_snapshot.json  cloudtrail_events.jsonl  hardened_account_snapshot.json
docs/: ARCHITECTURE.md  REPORT.md
docs/superpowers/specs/: 2026-06-11-cloud-security-posture-toolkit-design.md
src/cloudguard/: __init__.py  __main__.py  cli.py  engine.py  models.py
src/cloudguard/checks/: __init__.py  base.py  cloudtrail_checks.py  config_checks.py
src/cloudguard/ingest/: __init__.py  cloudtrail.py  snapshot.py
src/cloudguard/report/: __init__.py  console.py  json_report.py  markdown.py
terraform/: README.md
terraform/environments/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/backup/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/iam/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/waf/: README.md  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_cli.py  test_cloudtrail_checks.py  test_config_checks.py  test_engine_and_reports.py  test_ingest.py  test_models.py
